[package]
name = "snb_adapter_tg"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snb_core = { workspace = true }
snb_macros = { workspace = true }
teloxide = "0"
tokio = { version = "1", features = ["sync", "time", "rt"] }
toml = { workspace = true }
