[package]
name = "snb_adapter_tg"
version = "0.1.0"
authors = ["kmiit <kmiit@foxmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/kmiit/snb_adapter_tg"
repository = "https://github.com/kmiit/snb_adapter_tg"
edition = "2024"
rust-version = "1.96.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snb_core = { path = "../../crates/snb_core" }
snb_macros = { path = "../../crates/snb_macros" }
teloxide = "0"
tokio = { version = "1", features = ["sync", "time", "rt"] }
toml = "1"
url = "2"
